# provider-taxonomy

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  OPERATIONS.md  README.md  ai-provider-capability-taxonomy.md  examples.json  plan-matrix-disprover.md  plan-matrix-pipeline.md  plan-matrix-verification.md  plan-matrix-viewer.md  plan.md  pyproject.toml  research.md  schema.json
data/: _sweep_agent-building-sdk.json  _sweep_browser-computer-use-agent.json  agentic-matrix.json  changelog.json  scout-log.jsonl  taxonomy.json
docs/: agentic-coding-taxonomy.md
matrix/: capabilities.yaml  review-decisions.yaml
scripts/: add_feature_axes.py  apply_sweep.py  build_matrix.py  clean_features.py  dedupe_features.py  fill_gaps.py  gen_comparison.py  ground.py  ground_coverage.py  ground_extra.py  ground_features.py  ground_gap.py  ground_subfeatures.py  live_holdout.py  matrix_to_json.py  refine_feature_sources.py  render_matrix_md.py  repopulate_agentic.py  reverify.py  scout_gaps.py  swap_agentic.py  swap_capability.py  sweep_antigravity.py  test_websearch.py  validate_matrix.py
taxonomy/: __init__.py  audit.py  autobuild.py  changelog.py  cli.py  config.py  coverage.py  discover.py  doc_source.py  fixtures.py  index.py  ledger.py  metrics.py  provider_scan.py  rank.py  replay.py  schema.py  sources.py  staleness.py  triage.py  trust.py  validate.py  vertex_client.py
tests/: run_all.py  test_acceptance.py  test_admit.py  test_audit.py  test_changelog.py  test_discover.py  test_engine.py  test_evals.py  test_ledger.py  test_matrix_disprover.py  test_rank.py  (+6 more)
(+844 files in other folders)
