[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "provider-taxonomy"
version = "0.1.0"
description = "Self-maintaining AI-provider capability taxonomy — engine (validate/discover/triage/trust/eval) + static viewer."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# Live Vertex AI Claude + source fetching. AnthropicVertex needs only google-auth
# (bundled in anthropic[vertex]); the heavy google-cloud-aiplatform isn't required.
vertex = ["anthropic[vertex]>=0.40", "httpx>=0.27"]
dev = ["pytest>=8"]

[project.scripts]
taxo = "taxonomy.cli:main"

[tool.setuptools]
packages = ["taxonomy"]
